--- a/Index.html
+++ b/Index.html
@@ -1,21 +1,35 @@
-<html>
+<!doctype html>
+<html lang="en">
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>WebexCCEmails</title>
+  <meta name="description" content="WebexCCEmails is an internal integration used with Cisco Webex Contact Center and Webex Connect to enable secure email-based workflows using Google APIs.">
+  <!-- <link rel="stylesheet" href="styles.css"> -->
+  <!-- Consider adding a favicon and any required manifest files -->
 </head>
 <body>
-  <h1>WebexCCEmails</h1>
+  <header>
+    <h1>WebexCCEmails</h1>
+  </header>
 
-  <p>
-    WebexCCEmails is an internal integration application used with
-    Cisco Webex Contact Center and Webex Connect.
-  </p>
+  <main>
+    <p>
+      WebexCCEmails is an internal integration application used with
+      Cisco Webex Contact Center and Webex Connect.
+    </p>
 
-  <p>
-    This application enables secure email-based workflows using Google APIs.
-  </p>
+    <p>
+      This application enables secure email-based workflows using Google APIs.
+    </p>
 
-  <p>
-    <a href="privacy.html">Privacy Policy</a>
-  </p>
+    <p>
+      <a href="privacy.html">Privacy Policy</a>
+    </p>
+  </main>
+
+  <footer>
+    <!-- Optional: contact or internal support info -->
+  </footer>
 </body>
 </html>
