--- a/privacy.html
+++ b/privacy.html
@@ -1,25 +1,53 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Privacy Policy - WebexCCEmails</title>
+  <style>
+    body { font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; max-width: 860px; margin: 2rem auto; line-height: 1.6; padding: 0 1rem; }
+    h1,h2 { color: #111827; }
+    p { margin: 0.6rem 0; }
+    small { color: #6b7280; }
+  </style>
 </head>
 <body>
   <h1>Privacy Policy</h1>
+  <p><small>Effective date: 2026-01-28</small></p>
 
-  <p>
-    WebexCCEmails does not collect, store, or sell personal user data.
-  </p>
+  <h2>Summary</h2>
+  <p>WebexCCEmails does not collect, store, or sell personal user data for marketing purposes. We only access data from third-party services (for example, Google APIs) when you explicitly authorize those operations to support Webex Contact Center workflows.</p>
 
-  <p>
-    Google API access is used only to support authorized
-    Webex Contact Center workflows.
-  </p>
+  <h2>Data controller</h2>
+  <p>If you need to contact the data controller about privacy matters, email: REPLACE_WITH_REAL_CONTACT@example.com</p>
 
-  <p>
-    No user data is shared with third parties.
-  </p>
+  <h2>Google API access</h2>
+  <p>We use Google APIs only to perform functions you explicitly authorize as part of Webex Contact Center workflows. We do not use data obtained via Google APIs for unrelated purposes, and we do not sell that data to third parties. If your use involves Google account access, we will show the exact OAuth scopes requested and require your consent.</p>
 
-  <p>
-    Contact: admin@example.com
-  </p>
+  <h2>What we collect</h2>
+  <p>We do not collect personal user data (names, emails, identifiers) unless you explicitly provide it in a workflow that requires it. If any minimal technical logs are recorded for debugging or service operation (e.g., error logs, timestamps), those logs do not include personal data unless you provide it in the workflow.</p>
+
+  <h2>Third parties</h2>
+  <p>We do not share personal data with third parties except with service providers necessary to run the service and only as described above. If we use analytics or other third-party services in the future, we will disclose the providers and their purposes here.</p>
+
+  <h2>Data retention</h2>
+  <p>If any personal data is stored as part of an authorized workflow, it will be retained only as long as necessary to provide the service or as required by law. Contact us to request deletion or access (see contact below).</p>
+
+  <h2>Your rights</h2>
+  <p>Depending on your jurisdiction, you may have rights to access, correct, export, or delete personal data we process. To exercise these rights, contact: REPLACE_WITH_REAL_CONTACT@example.com</p>
+
+  <h2>Security</h2>
+  <p>We implement reasonable technical and organizational measures to protect data. No security measure is perfect, so if a breach occurs we will follow applicable law for notification.</p>
+
+  <h2>Children</h2>
+  <p>Our service is not directed to children under 16. We do not knowingly collect information from children.</p>
+
+  <h2>Changes to this policy</h2>
+  <p>We may update this policy. We will post the updated policy here with an updated effective date.</p>
+
+  <h2>Contact</h2>
+  <p>For privacy questions, data requests, or the removal of personal data, email: REPLACE_WITH_REAL_CONTACT@example.com</p>
+
+  <p><small>Last updated: 2026-01-28</small></p>
 </body>
 </html>
